--- a/style.css
+++ b/style.css
@@ -42,11 +42,13 @@ body {
 }
 
 .card {
+    padding-top: 5%;
     display: flex;
     flex-direction: column;
     background: #fff;
     box-shadow: 2px .8rem 1rem rgba(0, 0, 0, .09);
     border-radius: 8px 8px 0px 0px;
+    width: clamp(200px, 90%, 600px);
 }
 
 .under {
@@ -70,6 +72,9 @@ body {
     z-index: -1;
     transition: transform 1s;
     border-radius: 8px 8px 0px 0px;
+    background-image: url(images/argentina.jpg);
+    background-position: center;
+    background-size: cover;
 }
 
 .location-details {
@@ -143,7 +148,7 @@ body {
 
 .card-title {
     padding: 5px 0;
-    font-size: 3rem;
+    font-size: calc(2vw + 1.5rem);
     line-height: 1;
     text-align: center;
     margin-bottom: .5em;
@@ -159,10 +164,13 @@ body {
 .card-text {
     position: relative;
     text-align: center;
-    width: 80%;
+    width: clamp(50px, 80%, 600px);
     border-radius: 8px;
     padding: 5px 0;
     overflow-y: hidden;
+    overflow-wrap: break-word;
+    left: calc(50% - 40%);
+    font-size: clamp(1.5rem, 1.8vw, 1.8rem);
 }
 
 ul.activities {
@@ -170,7 +178,7 @@ ul.activities {
     list-style: circle;
     position: relative;
     font-weight: bold;
-    margin: .5rem 2rem
+    margin: calc(1vw + 0.5rem) 2rem;
 }
 
 li {
